[tool.poetry]
name = "pydra-spm"
version = "0.0.1"
description = "Pydra tasks for SPM"
authors = ["The Aramis Lab"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pydra"}]

[tool.poetry.dependencies]
python = "^3.7"
pydra = "^0.21"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.11.4"

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.0.0"
pydata-sphinx-theme = "^0.11.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.black]
target-version = ["py37"]

[tool.isort]
py_version = 37
profile = "black"
